# src/carwise/model.favorite.go
@@ -1,0 +1,7 @@
+package carwise
+
+type Favorite struct {
+	UserId    string `json:"user_id"`
+	ListingId string `json:"listing_id"`
+	CreatedAt int64  `json:"created_at"`
+}
